test/invalid/assign_to_function.qt
function add(int a, int b) -> int {
    return a + b;
}

function main() -> int {
    add = 10;  
    return 0;
}